<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_metronome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_start"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/btnMetronome"
                android:textColor="@color/black95" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_start"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/btnSearch"
                android:textColor="@color/black95" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_bpmdetect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_start"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/btnBPM"
                android:textColor="@color/black95"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_player"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_start"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/player"
                android:textColor="@color/black95" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>