<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/tool_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout11"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/btn_search_by_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_start"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/search_by_code"
                    android:textColor="@color/black95" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/btn_search_by_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_start"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/search_by_name"
                    android:textColor="@color/black95" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/btn_search_by_club"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_start"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/search_by_club"
                    android:textColor="@color/black95" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>