<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/tool_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="383dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="111dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center_horizontal"
                    android:text="Beat per bar"
                    android:textColor="@color/purple_700"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/beatspinner"
                    android:layout_width="83dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/purple_700" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="232dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <Button
                        android:id="@+id/minusOneButton"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/minus_one" />

                    <Button
                        android:id="@+id/minusFiveButton"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/minus_five" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tempoTextView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="4"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="1"
                    android:textColor="@color/purple_700"
                    android:textSize="90sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <Button
                        android:id="@+id/addOneButton"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/add_one" />

                    <Button
                        android:id="@+id/addFiveButton"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/add_five" />
                </LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="89dp"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/seekBarTempo"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:layout_weight=".5"
                    android:max="300"
                    android:min="1"/>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/playStopFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:src="@drawable/ic_play_arrow_white_36dp" />

    </LinearLayout>

<!--    <LinearLayout-->
<!--android:layout_alignParentBottom="true"-->
<!--android:background="@color/very_dark_primary"-->
<!--android:minHeight="?attr/actionBarSize"-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="wrap_content">-->

<!--        <ImageButton-->
<!--    android:id="@+id/bottomMetronomeButton"-->
<!--    android:scaleType="centerInside"-->
<!--    android:layout_weight="1"-->
<!--    android:layout_width="0dp"-->
<!--    android:background="@null"-->
<!--    android:layout_height="?attr/actionBarSize"/>-->

<!--    <ImageButton-->
<!--    android:id="@+id/bottomBpmButton"-->
<!--    android:background="@null"-->
<!--    android:scaleType="centerInside"-->
<!--    android:layout_weight="1"-->
<!--    android:layout_width="0dp"-->
<!--    android:layout_height="?attr/actionBarSize"/>-->

<!--    </LinearLayout>-->


</RelativeLayout>